# xmobar.hs

./: .gitignore  README.md  build  cabal.project  config.cabal  xmobar.hs
lib/: Config.hs  Icons.hs  Monitors.hs  Plugins.hs  Utils.hs
scripts/: active-player.sh  core-temp.sh  dunst-count.sh  dunst-status.sh  pacman-count.sh  pacman-updates.sh  swap.sh  switch-email.sh  wifi-status.sh  wifi-toggle.sh
src/: Bot.hs  Main.hs  Top.hs
xpm/: arch-linux-white-20x20.xpm  haskell-logo-20x20.xpm  haskell-logo-gray-20x20.xpm  haskell-logo-white-20x20.xpm  lambda-white-16x16.xpm  lambda-white-20x20.xpm  xmonad-logo-2022-20x20.xpm
