cabal-version:      3.0
name:               config
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Carter S. Levinson
maintainer:         carter@levinson.cc
-- copyright:
category:           Desktop
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable xmobar
  import:           warnings
  main-is:          xmobar.hs
  -- other-modules:
  -- other-extensions:
  build-depends:    base >= 4.11 && < 5,
                    xmobar,
  hs-source-dirs:   ./
  default-language: Haskell2010
