cabal-version:      3.0
name:               config
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Carter S. Levinson
maintainer:         carter@levinson.cc
copyright:          2023
category:           Desktop
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

common language
    default-language: Haskell2010

common dependencies
    build-depends: base >= 4.11 && < 5,
                   containers,
                   xmobar,

library
  import:           warnings,
                    dependencies,
                    language
  exposed-modules:  Config,
                    Icons,
                    Utils,
                    Plugins,
                    Monitors
  -- other-modules:    Xmobar.Plugins.Monitors

  hs-source-dirs:   lib

executable xmobar-top
  import:           warnings,
                    dependencies,
                    language
  main-is:          Top.hs
  build-depends:    config
  -- other-modules:
  -- other-extensions:
  hs-source-dirs:   src

executable xmobar-bot
  import:           warnings,
                    dependencies,
                    language
  main-is:          Bot.hs
  build-depends:    config
  -- other-modules:
  -- other-extensions:
  hs-source-dirs:   src

executable xmobar-main
  import:           warnings,
                    dependencies,
                    language
  main-is:          Main.hs
  build-depends:    config
  -- other-modules:
  -- other-extensions:
  hs-source-dirs:   src
