cabal-version:      3.0
name:               config
version:            0.1.0.0
synopsis:           Xmobar configuration
description:        Status bar configuration for Xmobar and XMonad
-- homepage:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Carter S. Levinson
maintainer:         carter@levinson.cc
copyright:          2023
category:           Desktop
build-type:         Simple
extra-doc-files:    CHANGELOG.md, README.md

common              warnings
  ghc-options:      -Wall

common              language
  default-language: Haskell2010

common              dependencies
  build-depends:    base >= 4.11 && < 5,
                    containers,
                    xmobar

executable          xmobar-top
  import:           warnings,
                    dependencies,
                    language
  main-is:          Top.hs
  build-depends:    config
  hs-source-dirs:   src

executable          xmobar-bot
  import:           warnings,
                    dependencies,
                    language
  main-is:          Bot.hs
  build-depends:    config
  hs-source-dirs:   src

executable          xmobar-single
  import:           warnings,
                    dependencies,
                    language
  main-is:          Single.hs
  build-depends:    config
  hs-source-dirs:   src

library
  import:           warnings,
                    dependencies,
                    language
  exposed-modules:  Config,
                    Icons,
                    Utils,
                    Plugins,
                    Monitors
  hs-source-dirs:   lib
